--- a/tunr_app/docker/Dockerfile
+++ b/tunr_app/docker/Dockerfile
@@ -4,7 +4,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONBUFFERED 1
 
 # install system dependencies
-RUN apt-get update && apt-get -y install netcat gcc postgresql && apt-get clean
+RUN apt-get update && apt-get -y install netcat gcc postgresql && apt-get -y install libpq-dev gcc && apt-get clean
 
 # install python dependencies
 RUN pip install --upgrade pip
