--- a/tunr_app/requirements.txt
+++ b/tunr_app/requirements.txt
@@ -5,5 +5,7 @@ pydantic==1.8.2
 uvicorn==0.13.4
 # db
 databases[postgresql]==0.4.2
-SQLAlchemy==1.3.16
+fastapi-sqlalchemy
+#SQLAlchemy==1.3.16
 alembic==1.4.2
+psycopg2
